--- a/window/style.css
+++ b/window/style.css
@@ -2310,3 +2310,15 @@ body {
 .xp-dialog-buttons .xp-button {
 	min-width: 75px;
 }
+
+.xp-window iframe {
+	display: block;
+	width: 100%;
+	height: 100%;
+	border: none;
+	background: white;
+}
+
+.iframe-overlay-active iframe {
+	pointer-events: none;
+}
